<resources>
    <string name="kevin_window_main_terms_privacy_policy">I have read and agree with Terms &amp; Conditions and Privacy Policy</string>
    <string name="kevin_window_main_terms_privacy_policy_clickable_terms">Terms &amp; Conditions</string>
    <string name="kevin_window_main_terms_privacy_policy_clickable_policy">Privacy Policy</string>
    <string name="kevin_privacy_policy_url" translatable="false">https://www.kevin.eu/docs/EN/privacy-policy/</string>
    <string name="kevin_terms_url" translatable="false">https://www.kevin.eu/docs/EN/terms-and-conditions/</string>
    <string name="kevin_window_main_proceed_button">Donate • %s EUR</string>
    <string name="kevin_window_main_bank_payment">Bank payment</string>
    <string name="kevin_window_main_card_payment">Card payment</string>
    <string name="kevin_window_main_details_lable">Enter details</string>
    <string name="kevin_window_main_email_label">E-mail</string>
    <string name="kevin_window_main_amount_label">Payment amount</string>
    <string name="kevin_window_main_country_label">Select country</string>
    <string name="kevin_window_main_charity_label">Select charity</string>
    <string name="kevin_window_main_subtitle_label">Pick a charity you want to donate to</string>
    <string name="kevin_window_main_title_label">Demo payment</string>
    <string name="kevin_window_main_email_blank_error">E-mail address is required</string>
    <string name="kevin_window_main_email_invalid_format_error">E-mail address is invalid</string>
    <string name="kevin_window_main_amount_blank_error">Amount must be greater than zero</string>
    <string name="kevin_dialog_payment_success_title">Payment successful</string>
    <string name="kevin_dialog_payment_success_button">Ok</string>
    <string name="kevin_window_main_no_creditor_selected_error">Charity is not selected</string>
    <string name="kevin_window_main_amount_field_currency">EUR</string>
    <string name="kevin_window_account_actions_remove">Remove</string>
    <string name="kevin_window_choose_account_title">Choose bank account</string>
    <string name="kevin_window_link_account_empty_state_title">Link your first bank account</string>
    <string name="kevin_window_link_account_empty_state_subtitle">The one app for your money. Add bank accounts. Track your spendings. Control your budget. And so much more...</string>
    <string name="kevin_window_link_account_empty_state_link_button">Link Bank Account</string>
    <string name="kevin_window_link_account_title">Account linking</string>
    <string name="kevin_window_link_account_link_new_button">Link new account</string>
    <string name="kevin_window_link_account_linked_accounts_label">Linked accounts</string>
    <string name="kevin_window_payment_type_title">Choose payment type</string>
    <string name="kevin_window_payment_type_bank">Bank Payment</string>
    <string name="kevin_window_payment_type_linked">Bank Payment via Linked Account</string>
    <string name="kevin_window_payment_type_card">Card Payment</string>
</resources>