<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <View
        android:id="@+id/kevin_window_handle"
        android:layout_width="40dp"
        android:layout_height="6dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/kevin_handle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTextView"
        style="@style/TextAppearance.Headline3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/kevin_window_payment_type_title"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/kevin_window_handle" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bank_payment_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/kevin_bg_clickable_top"
            android:padding="16dp">

            <ImageView
                android:id="@+id/bank_payment_image_view"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/kevin_ic_bank_payment"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/bank_payment_title"
                style="@style/TextAppearance.Title1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/kevin_window_payment_type_bank"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/bank_payment_chevron"
                app:layout_constraintStart_toEndOf="@+id/bank_payment_image_view"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/bank_payment_chevron"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/kevin_ic_chevron_right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linked_payment_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/kevin_bg_clickable_middle"
            android:padding="16dp">

            <ImageView
                android:id="@+id/linked_payment_image_view"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_linked_payment"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/linked_payment_title"
                style="@style/TextAppearance.Title1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/kevin_window_payment_type_linked"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/linked_payment_chevron"
                app:layout_constraintStart_toEndOf="@+id/linked_payment_image_view"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/linked_payment_chevron"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/kevin_ic_chevron_right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card_payment_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/kevin_bg_clickable_bottom"
            android:padding="16dp">

            <ImageView
                android:id="@+id/card_payment_image_view"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_card_payment"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/card_payment_title"
                style="@style/TextAppearance.Title1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/kevin_window_payment_type_card"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/card_payment_chevron"
                app:layout_constraintStart_toEndOf="@+id/card_payment_image_view"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/card_payment_chevron"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/kevin_ic_chevron_right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</merge>