<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?primaryBackgroundColor">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title_text_view"
                style="@style/TextAppearance.Headline1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="63dp"
                android:text="@string/kevin_window_main_title_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/country_country_label_text_view"
                style="@style/TextAppearance.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="30dp"
                android:gravity="start"
                android:text="@string/kevin_window_main_country_label"
                android:textColor="?primaryTextColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_text_view" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/country_selection_container"
                android:layout_width="0dp"
                android:layout_height="54dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/kevin_bg_clickable_row"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/country_country_label_text_view">

                <ImageView
                    android:id="@+id/country_flag_image_view"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="16dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/kevin_ic_country_flag_lt"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/country_text_view"
                    style="@style/TextAppearance.Title1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/kevin_window_main_country_label"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/country_flag_image_view"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/selected_country_text_view"
                    style="@style/TextAppearance.Title1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/chevron"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Lithuania" />

                <ImageView
                    android:id="@+id/chevron"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="11dp"
                    android:src="@drawable/kevin_ic_chevron_right"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/country_charity_label_text_view"
                style="@style/TextAppearance.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="28dp"
                android:gravity="start"
                android:text="@string/kevin_window_main_charity_label"
                android:textColor="?primaryTextColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/country_selection_container" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/creditors_recycler_view"
                android:layout_width="wrap_content"
                android:layout_height="51dp"
                android:layout_marginTop="12dp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/country_charity_label_text_view"
                tools:listitem="@layout/kevin_item_creditor" />

            <ProgressBar
                android:id="@+id/creditors_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                app:layout_constraintBottom_toBottomOf="@id/creditors_recycler_view"
                app:layout_constraintEnd_toEndOf="@id/creditors_recycler_view"
                app:layout_constraintStart_toStartOf="@id/creditors_recycler_view"
                app:layout_constraintTop_toTopOf="@id/creditors_recycler_view" />

            <TextView
                android:id="@+id/details_label_text_view"
                style="@style/TextAppearance.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="32dp"
                android:gravity="start"
                android:text="@string/kevin_window_main_details_lable"
                android:textColor="?primaryTextColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/creditors_recycler_view" />

            <TextView
                android:id="@+id/email_field_label_text_field"
                style="@style/TextAppearance.Subtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/kevin_window_main_email_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details_label_text_view" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_text_field"
                style="@style/TextInput.Layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="4dp"
                app:errorEnabled="false"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_field_label_text_field">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/amount_label_text_view"
                style="@style/TextAppearance.Subtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="26dp"
                android:text="@string/kevin_window_main_amount_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_text_field" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/amount_text_field"
                style="@style/TextInput.Layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="4dp"
                app:endIconMode="none"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/amount_label_text_view">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxLength="10" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/TextAppearance.Subtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/kevin_window_main_amount_field_currency"
                app:layout_constraintBottom_toBottomOf="@id/amount_text_field"
                app:layout_constraintEnd_toEndOf="@id/amount_text_field"
                app:layout_constraintTop_toTopOf="@id/amount_text_field" />

            <CheckBox
                android:id="@+id/terms_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="32dp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="@+id/terms_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/amount_text_field" />

            <TextView
                android:id="@+id/terms_text_view"
                style="@style/TextAppearance.Caption2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@id/terms_error_image_view"
                app:layout_constraintStart_toEndOf="@id/terms_checkbox"
                app:layout_constraintTop_toBottomOf="@id/amount_text_field"
                tools:text="I have read and agree with Terms &amp; Conditions and Privacy Policy" />

            <ImageView
                android:id="@+id/terms_error_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:src="@drawable/kevin_ic_error"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/terms_text_view"
                app:layout_constraintTop_toTopOf="@id/terms_text_view" />

            <Button
                android:id="@+id/proceed_button"
                style="@style/Button.Primary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/terms_checkbox"
                app:layout_constraintVertical_bias="1"
                tools:text="Donate . 0.01 EUR" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <FrameLayout
        android:id="@+id/progress_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?primaryBackgroundColor"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/action_bar" />

    </FrameLayout>

</merge>